@@ -11,6 +11,7 @@ BUGFIX:
 * type=address/service-merger | bugfix - extend validation if objects can be merged
 * class PanoramaConf | bugfix for type=device actions=devicegroup-create:NAME,parent - parentDG was not set correctly
 * type=address/service actions=move:DG | bugfix - add additional validation for move to upper/lower level DG - if another object with same name will change behaviour
+* f5_bigIP | bugfix for ServiceGroup which can not handle Description based on PAN-OS
 
 GENERAL:
 
